Output di Terminale salvato.txt
Last login: Tue Apr 15 19:24:11 on ttys000
[falcon:~] vittorio% /var/folders/xr/07brgt9j2vdb_r5n10x4znnr0000gn/T/Cleanup\ At\ Startup/untitled\ text-419275451.673.command ; exit;
Debug.rb
Emacs support available.

/private/var/folders/xr/07brgt9j2vdb_r5n10x4znnr0000gn/T/Cleanup At Startup/untitled text-419275451.672:1:puts "ciao mondo"
(rdb:1) 
(rdb:1) 
(rdb:1) 
(rdb:1) quit
Really quit? (y/n) y
logout

[Processo completato]a
  [Ripristinato]
[falcon:~] vittorio% ls
Desktop		Downloads	Library		Music		Public
Documents	Dropbox		Movies		Pictures	Sites
[falcon:~] vittorio% cd Desktop/Rubystudio/
[falcon:~/Desktop/Rubystudio] vittorio% ls
test.rb
[falcon:~/Desktop/Rubystudio] vittorio% irb
irb(main):001:0> 3
=> 3
irb(main):002:0> 3+4
=> 7
irb(main):003:0> "qualcosa"
=> "qualcosa"
irb(main):004:0> "qualcosa" + " " + "di diverso"
=> "qualcosa di diverso"
irb(main):005:0> "3" + "4"
=> "34"
irb(main):006:0> "2".to_i
=> 2
irb(main):007:0> 2.to_s
=> "2"
irb(main):008:0> 2+"3"
TypeError: String can't be coerced into Fixnum
	from (irb):8:in `+'
	from (irb):8
	from /usr/bin/irb:12:in `<main>'
irb(main):009:0> "2"+3
TypeError: no implicit conversion of Fixnum into String
	from (irb):9:in `+'
	from (irb):9
	from /usr/bin/irb:12:in `<main>'
irb(main):010:0> "2"+3.to_s
=> "23"
irb(main):011:0> 2+"3".to_i
=> 5
irb(main):012:0> print 2
2=> nil
irb(main):013:0> print "2+3"
2+3=> nil
irb(main):014:0> print 2+3
5=> nil
irb(main):015:0> print "2+3", 2+3
2+35=> nil
irb(main):016:0> print "2+3=", 2+3
2+3=5=> nil
irb(main):017:0> 2
=> 2
irb(main):018:0> 2+3
=> 5
irb(main):019:0> print "2+3=", 2+3
2+3=5=> nil
irb(main):020:0> puts "2+3=", 2+3
2+3=
5
=> nil
irb(main):021:0> print "2+3=", 2+3, "\n"
2+3=5
=> nil
irb(main):022:0> print '2+3=', 2+3, "\n"
2+3=5
=> nil
irb(main):023:0> print '2+3=', 2+3, '\n'
2+3=5\n=> nil
irb(main):024:0> "Il dado e' tratto"
=> "Il dado e' tratto"
irb(main):025:0> "Cesare disse: "Il dado e' tratto""
irb(main):026:0' 
irb(main):027:0' sss'
SyntaxError: (irb):25: syntax error, unexpected tCONSTANT, expecting end-of-input
"Cesare disse: "Il dado e' tratto""
                  ^
	from /usr/bin/irb:12:in `<main>'
irb(main):028:0> 'Cesare disse: "Il dado e' tratto"'
irb(main):029:0" "
SyntaxError: (irb):28: syntax error, unexpected tIDENTIFIER, expecting end-of-input
'Cesare disse: "Il dado e' tratto"'
                                 ^
	from /usr/bin/irb:12:in `<main>'
irb(main):030:0> 'Nei promessi sposi sta: "Omnia munda mundis"'
=> "Nei promessi sposi sta: \"Omnia munda mundis\""
irb(main):031:0> 'Cesare disse: "Il dado e\' tratto"'
=> "Cesare disse: \"Il dado e' tratto\""
irb(main):032:0> "Gianfranco d'Angelo"
=> "Gianfranco d'Angelo"
irb(main):033:0> 'Gianfranco d'Angelo'
irb(main):034:0' '
SyntaxError: (irb):33: syntax error, unexpected tCONSTANT, expecting end-of-input
'Gianfranco d'Angelo'
                    ^
	from /usr/bin/irb:12:in `<main>'
irb(main):035:0> 'Gianfranco d\'Angelo'
=> "Gianfranco d'Angelo"
irb(main):036:0> print "2+3=", 2+3
2+3=5=> nil
irb(main):037:0> print "Qui non puo' essere stampato il carattere \"
irb(main):038:0" "
Qui non puo' essere stampato il carattere "
=> nil
irb(main):039:0> print "Qui non puo' essere stampato il carattere \\"
Qui non puo' essere stampato il carattere \=> nil
irb(main):040:0> 
